# MemorySafenet

generic_hashset/: export.h  utils.h
generic_hashset/src/: CMakeLists.txt  add2hashset.c  free_hashset.c  init_hash_element.c  init_hashset.c  rmv_from_hashset.c
memory_safenet/: export.h  utils.h
memory_safenet/src/: CMakeLists.txt  garbage_collect.c  garbage_dump.c  garbage_state.c  modulo_hashing.c  safe_calloc.c  safe_errx.c  safe_free.c  safe_malloc.c  safe_realloc.c
unsafe_generic_hashset/: export.h  utils.h
unsafe_generic_hashset/src/: CMakeLists.txt  is_in_hashset.c  unsafe_add2hashset.c  unsafe_free_hashset.c  unsafe_init_hash_element.c  unsafe_init_hashset.c  unsafe_rmv_from_hashset.c
